--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
 server.port=8081
+server.servlet.context-path=
 spring.datasource.url=jdbc:mysql://localhost:3306/javadb
 spring.datasource.username=root
 spring.datasource.password=root
