--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
 server.port=8081
-server.servlet.context-path=
+
+#Enabling Multipart upload:
+spring.servlet.multipart.enabled=True
+
+#max File size:
+spring.servlet.multipart.max-file-size = 300MB
+
+#min File after which it will start writing
+spring.servlet.multipart.file-size-threshold = 2KB
+
+#Configuration for DB connectivity:
 spring.datasource.url=jdbc:mysql://localhost:3306/javadb
 spring.datasource.username=root
 spring.datasource.password=root
