--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,12 @@
         <version>5.0.1</version>
     </dependency>
 
-
+<!--
+		https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 
 	</dependencies>
 
